# simple-notepad-project

./: CMakeLists.txt  find_replace_dialog.ui  main.cpp  main_window.cpp  main_window.h  notepad_exception.h  spell_checker.cpp  spell_checker.h  text_transform.h  word_frequency_dialog.ui
